[project]
name = "aa-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camoufox",
    "httpx[http2]>=0.28.1",
    "loguru>=0.7.3",
    "python-dateutil>=2.9.0.post0",
    "tqdm>=4.67.1",
    "uuid>=1.30",
]

# Add this section:
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aa_scraper"]

[tool.uv.sources]
camoufox = { git = "https://github.com/coryking/camoufox.git", subdirectory = "pythonlib", rev = "v142.0.1-fork.27" }
