[project]
name = "aa-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "camoufox>=0.4.11",
    "curl-cffi>=0.13.0",
    "httpx[http2]>=0.28.1",
    "loguru>=0.7.3",
    "orjson>=3.11.4",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dateutil>=2.9.0.post0",
    "tqdm>=4.67.1",
    "uuid>=1.30",
]

# Add this section:
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aa_scraper"]
